kubernetes/external-routes/srv-plg-1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: srv-plg-1
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
