kubernetes/external-routes/srv-plg-1/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: srv-plg-1-ingressroute
spec:
  entryPoints:
  - websecure
  routes:
  - match: "Host(`*.srv-plg-1.eggenberg.io`) || Host(`game.eggenberg.io`)"
    kind: Rule
    services:
    - name: srv-plg-1
      port: 443
